# twclient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  client.c  client.h  egl.h  meson.build  nk_backends.h  progress.org  ui.h
.github/actions/: entrypoint.sh  ubuntu-deps.sh
.github/workflows/: main.yml
cmake/: AddProtocols.cmake  FindLibRSVG.cmake  FindUDEV.cmake  FindWaylandProtocols.cmake
config/: twclient-config.cmake  twclient-icons.pc.in  twclient-nkcairo.pc.in  twclient-nkegl.pc.in  twclient.pc.in
include/: client.h  desktop_entry.h  egl.h  event_queue.h  image_cache.h  meson.build  nk_backends.h  shmpool.h  theme.c  theme.h  twclient.h  ui.h  ui_event.h
include/twclient/: client.h  desktop_entry.h  egl.h  event_queue.h  glhelper.h  image_cache.h  nk_backends.h  output.h  shmpool.h  theme.h  twclient.h  ui.h  ui_event.h  util.h
nk_backends/: CMakeLists.txt  nk_lua.h  nk_wl_cairo.c  nk_wl_egl.c  nk_wl_internal.h  nk_wl_vulkan.c
protocols/: CMakeLists.txt  taiwins_theme.xml
src/: CMakeLists.txt  appsurf.c  buffer.c  client.c  data_source.c  desktop_entry.c  egl.c  event_queue.c  glhelper.c  icon_search.c  image_cache.c  keyboard.c  meson.build  output.c  pointer.c  theme.c  touch.c  ui.c
src/nk_backends/: CMakeLists.txt  nk_lua.h  nk_wl_cairo.c  nk_wl_egl.c  nk_wl_font.c  nk_wl_font.h  nk_wl_image.h  nk_wl_input.h  nk_wl_internal.h  nk_wl_shell.h  nk_wl_theme.c  nk_wl_theme.h  nk_wl_vulkan.c
test/: CMakeLists.txt  test_dot_desktop.c  test_event_queue.c  test_fontconfig.c  test_lua_backend.c  test_multi_lua.c  test_nk_cairo.c  test_nk_egl.c  test_nk_vulkan.c  test_queue.c  test_read_theme.c  test_stb_image.c  test_udev.c
theme/: theme.c  theme.h
